--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "css-loader": "^6.7.3",
     "cssnano": "^5.1.14",
     "file-loader": "^6.2.0",
+    "framer-motion": "^10.12.7",
     "gh-pages": "^4.0.0",
     "html-webpack-plugin": "^5.5.0",
     "mini-css-extract-plugin": "^2.7.2",
